<resources>
    <string name="app_name">Pupil PresentAR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Lat and Long</string>
    <string name="no_address_found">No Address Found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="address_found">Found</string>

    <!--Add Student-->
    <string name="prompt_rollno">Roll No</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_parent_mobile">Parent Mobile</string>
    <string name="prompt_parent_occupation">Parent Occupation</string>
    <string name="action_register">Register</string>

    <string name="support_email_subject">App Feedback</string>
    <string name="contact_email">bhalodia.bhavdip@gmail.com</string>
    <string name="activity_login">Log In</string>
    <string name="no_network_available">No internet connection.</string>
    <string name="error_empty_username">Please enter username.</string>
    <string name="error_empty_password">Please enter password.</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="cancel_caps">CANCEL</string>



</resources>
